manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meet-backend
  template:
    metadata:
      labels:
        app: meet-backend
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: meet
        command: ["gunicorn", "-c", "/usr/local/etc/gunicorn/meet.py", "meet.wsgi:application", "--reload"]
        image: lasuite/meet-backend:v0.1.11
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /__heartbeat__
            port: 8000
          initialDelaySeconds: 30
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /__lbheartbeat__
            port: 8000
          initialDelaySeconds: 30
          timeoutSeconds: 1
        volumeMounts:
      volumes:
