manifests/deployment-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: meet
      app.kubernetes.io/instance: meet
      app.kubernetes.io/component: celery
  template:
    metadata:
      labels:
        app.kubernetes.io/name: meet
        app.kubernetes.io/instance: meet
        app.kubernetes.io/component: celery
    spec:
      shareProcessNamespace: false
      containers:
        - name: meet
          image: lasuite/meet-summary:v0.1.12
          imagePullPolicy: Always
          command:
            - celery
            - -A
            - summary.core.celery_worker
            - worker
            - --pool=solo
            - --loglevel=info
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
      volumes:
