manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet-frontend
  labels:
    app: meet-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meet-frontend
  template:
    metadata:
      annotations:
      labels:
        app: meet-frontend
    spec:
      shareProcessNamespace: false
      containers:
        - name: meet
          image: lasuite/meet-frontend:v0.1.15
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
          volumeMounts:
      volumes:
