manifests/deployment-livekit-egress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit-egress
  labels:
    app: livekit-egress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livekit-egress
  template:
    metadata:
      labels:
        app: livekit-egress
    spec:
      serviceAccountName: default
      securityContext: {}
      terminationGracePeriodSeconds: 18000
      containers:
      - name: egress
        securityContext: {}
        image: livekit/egress:v1.8.4
        imagePullPolicy: IfNotPresent
        ports:
        - name: health
          containerPort: 8080
          protocol: TCP
        - name: metrics
          containerPort: 9090
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: health
        readinessProbe:
          httpGet:
            path: /
            port: health
        resources: {}
