manifests/deployment-livekit-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit-livekit-server
  labels:
    app: livekit-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livekit-server
  template:
    metadata:
      labels:
        app: livekit-server
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      terminationGracePeriodSeconds: 18000
      containers:
      - name: livekit-server
        securityContext: {}
        image: livekit/livekit-server:v1.8.0
        imagePullPolicy: IfNotPresent
        args: [--disable-strict-config]
        ports:
        - name: http
          containerPort: 7880
          protocol: TCP
        - name: rtc-tcp
          containerPort: 7881
          hostPort: 7881
          protocol: TCP
        - name: turn-udp
          containerPort: 443
          hostPort: 443
          protocol: UDP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources: {}
