manifests/deployment-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-minio
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      automountServiceAccountToken: false
      containers:
        - name: minio
          image: minio/minio:RELEASE.2024-11-07T00-52-20Z
          command: ["minio", "server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources:
            limits:
              cpu: 300m
              memory: 1Gi
              ephemeral-storage: "2Gi"
            requests:
              cpu: 300m
              memory: 512Mi
              ephemeral-storage: "2Gi"
          volumeMounts:
            - name: minio-pv-storage
              mountPath: /data
      volumes:
        - name: minio-pv-storage
          persistentVolumeClaim:
            claimName: pvc-minio
