manifests/deployment-summary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet-summary
  labels:
    app: summary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: summary
  template:
    metadata:
      labels:
        app: summary
    spec:
      shareProcessNamespace: false
      containers:
        - name: meet
          image: lasuite/meet-summary:v0.1.10
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8000
            initialDelaySeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /__lbheartbeat__
              port: 8000
            initialDelaySeconds: 30
            timeoutSeconds: 1
