manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: meet-backend
  type: ClusterIP
