manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: meet-frontend
  type: ClusterIP
