manifests/service-livekit-turn.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-livekit-server-turn
spec:
  type: LoadBalancer
  ports:
    - name: stun-turn-tcp
      protocol: TCP
      port: 443
      targetPort: 443
    - name: media-tcp
      protocol: TCP
      port: 7881
      targetPort: 7881
  selector:
    app: livekit-server
---
apiVersion: v1
kind: Service
metadata:
  name: svc-livekit-server-turn-udp
spec:
  type: LoadBalancer
  ports:
  - name: stun-turn-udp
    port: 3478
    protocol: UDP
    targetPort: 3478
  - name: media-udp
    port: 7882
    protocol: UDP
    targetPort: 7882
  selector:
    app: livekit-server
