manifests/service-livekit.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-livekit
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: turn-udp
      protocol: UDP
      name: turn-udp
  selector:
    app: livekit-server
  type: LoadBalancer
