manifests/service-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-minio
spec:
  ports:
    - name: minio
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: minio-console
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: minio
  type: ClusterIP
