manifests/service-posthog-assets.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-posthog-assets
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: meet-posthog-assets
  type: ClusterIP
