manifests/service-posthog.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-posthog
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: meet-posthog
  type: ClusterIP
