manifests/service-summary.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-meet-summary
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: summary
  type: ClusterIP
