manifests/ingress-livekit.yaml
kind: Ingress
metadata:
  name: ing-livekit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "Upgrade";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
apiVersion: networking.k8s.io/v1
spec:
  rules:
    - host: livekit.meet.la-suite.apps.digilab.network
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-livekit
                port:
                  number: 80
  tls:
    - hosts:
        - livekit.meet.la-suite.apps.digilab.network
      secretName: livekit-cert
