manifests/ingress-posthog-assets.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-posthog-assets
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/upstream-vhost: eu-assets.i.posthog.com
spec:
  ingressClassName: nginx
  tls:
    - secretName: meet-posthog-tls
      hosts:
        - product.meet.la-suite.apps.digilab.network
  rules:
    - host: product.meet.la-suite.apps.digilab.network
      http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: svc-posthog-assets
                port:
                  number: 443
