manifests/ingress-posthog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-posthog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/upstream-vhost: eu.i.posthog.com
spec:
  ingressClassName: nginx
  tls:
    - secretName: meet-posthog-tls
      hosts:
        - product.meet.la-suite.apps.digilab.network
  rules:
    - host: product.meet.la-suite.apps.digilab.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-posthog
                port:
                  number: 443
